Revision history for Parse-ANSIColor-Tiny

{{$NEXT}}

  [Enhancements]
  - Add colors(), foreground_colors(), and background_colors()

  [Fixes]
  - Treat empty sequences as 0 (clear)
  - Limit exports to @EXPORT_OK rather than any sub
  - Localize $_ before using map

0.302     2011-11-14T18:34:58Z

  - Initial release